<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budgetation</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="match_dialog_title">Matches</string>
    <string name="match_dialog_message">Select best match:</string>
    <string name="alter_dialog_title">Alter Purchase</string>
    <string name="alter_dialog_message">Choose desired action:</string>
    <string name="edit_purchase">Edit</string>
    <string name="delete_purchase">Delete</string>
    <string name="delete_dialog_title">Delete Purchase</string>
    <string name="delete_dialog_message">Do you really want to delete this purchase?</string>
    <string name="edit_dialog_title">Edit Purchase Details</string>
	<string name="edit_dialog_name_label">Name</string>
	<string name="edit_dialog_quantity_label">Quantity</string>
	<string name="edit_dialog_price_label">Price</string>
	<string name="edit_dialog_currency_label">Currency</string>
	<string name="add_manually">Add Manually</string>
	<string name="save">Save</string>
	<string name="total">Total: </string>
	<string name="prev">Prev</string>
	<string name="next">Next</string>
	<string name="delete">Delete Purchase</string>
	<string name="export">Export As..</string>
	<string name="clear">Clear Purchases</string>
	<string name="no_purchases">(No Purchases)</string>
	    
</resources>
