<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_add_manually"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_manually"/>
    
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/clear"/>
    
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/export"/>
    
    <item
        android:id="@+id/action_prev"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/prev"/>
    
    <item
        android:id="@+id/action_next"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/next"/>

</menu>
